refactor: 优化项目结构并清理代码
- 在Cargo.toml中添加crates/*作为工作区成员
- 移除langchain/examples/sample.rs中未使用的futures导入
- 简化langchain/src/lib.rs中的stream实现并标记为待办
- 删除langgraph/marcos/src/tool.rs中未使用的宏相关代码

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = ["langchain_openai", "langchain_core", "langgraph", "langchain"]
+members = [
+    "langchain_openai",
+    "langchain_core",
+    "langgraph",
+    "langchain",
+    "crates/*",
+]
 resolver = "2"
 
 
