feat(langgraph): 添加对可变参数节点边的支持
添加 IntoGraphNodeArray trait 和实现，支持通过元组添加多个节点边
更新依赖以支持可变参数功能
添加 docsrs 相关配置

--- a/crates/langgraph/Cargo.toml
+++ b/crates/langgraph/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2024"
 thiserror = { workspace = true }
 async-trait = { workspace = true }
 downcast-rs = { workspace = true }
+variadics_please = "1.1"
 
 langgraph_macro = { path = "./macro" }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt"] }
+
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
