feat(agent): 实现ReAct代理框架并添加工具调用支持
添加ReActAgent结构体实现代理逻辑，支持工具调用和LLM交互
扩展ChatModel trait以支持工具参数传递
添加错误处理和日志记录功能
更新依赖项并添加示例代码

--- a/crates/langchain/Cargo.toml
+++ b/crates/langchain/Cargo.toml
@@ -10,9 +10,12 @@ langgraph_macro = { path = "../langgraph/macro" }
 langchain_core = { path = "../langchain_core" }
 serde = { workspace = true }
 serde_json = { workspace = true }
+thiserror = { workspace = true }
 futures = "0.3"
+tracing = "0.1"
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt"] }
-langchain_core_macro = { path = "../langchain_core/macro" }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tracing-subscriber = { workspace = true }
 schemars = { workspace = true }
+langchain_openai = { path = "../langchain_openai" }
