feat(checkpoint): 添加检查点模块支持状态持久化
实现检查点功能，包括核心数据结构 Checkpoint 和 CheckpointBlob，提供 Checkpointer trait 定义持久化接口
添加 MemorySaver 内存实现用于测试，支持状态序列化和反序列化
新增相关依赖 serde 和 anyhow 用于序列化和错误处理

--- a/crates/langgraph/Cargo.toml
+++ b/crates/langgraph/Cargo.toml
@@ -14,6 +14,9 @@ tracing = { workspace = true }
 langgraph_macro = { path = "./macro" }
 tokio = { version = "1", features = ["macros", "rt", "sync"] }
 smallvec = "1.15.1"
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
+anyhow.workspace = true
 
 
 [lints]
