--- a/crates/langgraph/Cargo.toml
+++ b/crates/langgraph/Cargo.toml
@@ -18,7 +18,8 @@ serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 anyhow.workspace = true
 langchain_core = { path = "../langchain_core" }
-uuid = { version = "1.0", features = ["v4", "serde"] }
+uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
+chrono = "0.4.43"
 
 
 [lints]
