feat: 添加 postgres 功能和 full-checkpoint 特性
- 在 langgraph 中添加 postgres feature
- 添加 full-checkpoint feature 包含所有检查点后端
- 在 langchain 中使用 full-checkpoint feature

--- a/crates/langgraph/Cargo.toml
+++ b/crates/langgraph/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [features]
 default = ["memory"]
+full-checkpoint = ["memory", "sqlite", "postgres"]
 memory = []
 sqlite = []
+postgres = []
 
 [dependencies]
 thiserror = { workspace = true }
@@ -29,6 +31,7 @@ chrono = "0.4.43"
 sqlx = { version = "0.8", features = [
     "runtime-tokio-rustls",
     "sqlite",
+    "postgres",
     "chrono",
     "uuid",
     "json",
